--- a/universiell-utforming/uu_style.css
+++ b/universiell-utforming/uu_style.css
@@ -180,8 +180,15 @@ p {
 }
 
 @media only screen and (max-width: 900px) {
+
+    #hero {
+        padding: 200px 200px;
+    }
+    
     .uu {
-        margin: 15px;
+        margin-left: 15px;
+        margin-right: 15px;
+        margin-top: 115px;
     }
 
     h1 {
@@ -232,7 +239,7 @@ p {
 
 @media only screen and (max-width: 800px) {
     #hero {
-        padding: 170px 150px;
+        padding: 230px 150px;
     }
 
     h1 {
@@ -241,9 +248,8 @@ p {
 }
 
 @media only screen and (max-width: 600px) {
-
-    .lesMer {
-        margin-bottom: 150px;
+    section:nth-child(1) {
+        margin-top: 150px;
     }
 
     h1 {
@@ -264,7 +270,7 @@ p {
     }
 
     #hero {
-        padding: 150px 47px;
+        padding: 210px 47px;
     }
 
     .boks {
