--- a/spill/spill.css
+++ b/spill/spill.css
@@ -34,7 +34,7 @@ h1 {
   font-size: 65px;
   text-align: center;
   text-shadow: 3px 3px 3px grey;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 40%);
   color: rgb(255, 255, 255);
   font-family: 'Comfortaa', sans-serif;
   width: 800px;
