--- a/gdpr/gdpr.css
+++ b/gdpr/gdpr.css
@@ -69,7 +69,7 @@ p {
 
 #GDPR {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 300px 500px;
 }
 
 #GDPR_sirkel {
