--- a/gdpr/gdpr.css
+++ b/gdpr/gdpr.css
@@ -70,6 +70,9 @@ p {
 #GDPR {
     display: grid;
     grid-template-columns: 300px 500px;
+    background-color: #d0f8ff;
+    padding: 0px 15px 50px 15px;
+    margin-top: 70px;
 }
 
 #GDPR_sirkel {
@@ -78,7 +81,7 @@ p {
     justify-content: center;
     align-items: center;
     height: fit-content;
-    height: 500px;
+    height: 400px;
 }
 
 #main-image {
@@ -106,7 +109,7 @@ p {
     display: none;
     width: 500px;
     padding-left: 50px;
-    padding-top: 150px;
+    padding-top: 110px;
 }
 
 .hidden_box h2 {
