--- a/gdpr/gdpr.css
+++ b/gdpr/gdpr.css
@@ -173,20 +173,18 @@ p {
     transform: rotate(0deg) translateY(-80px);
 }
 
-
 #definition {
     font-weight: bold;
 }
-
 #personvern {
     background-color: lightcyan;
-    margin: 60px 0px;
+    margin: 25px 0;
     padding: 50px;
 }
 
 #cookies-intro {
     background-color: var(--quinary-color);
-    margin: 15px 0px;
+    margin: 15px 0;
     padding: 50px;
 }
 
@@ -200,7 +198,7 @@ p {
     background-color: beige;
     padding: 50px;
     max-width: 800px;
-    margin: 20px 0;
+    margin: 15px 0;
 }
 
 #arrow {
@@ -209,11 +207,56 @@ p {
 
 .hidden {
     display: none;
-    /* Skjul elementer med denne klassen */
 }
 
+@media only screen and (max-width: 1000px) {
+    #hero {
+        padding: 200px 200px;
+    }
 
-@media screen and (max-width: 800px) {
+    h1 {
+        font-size: 60px;
+    }
+
+    .intro{
+        margin: 15px;
+    }
+
+    #cookies,
+    #cookies-intro,
+    #personvern {
+        margin: 25px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+
+    #hero {
+        padding: 200px 200px;
+    }
+
+    h1 {
+        font-size: 55px;
+        width: auto;
+    }
+
+    h2 {
+        font-size: 40px;
+    }
+
+    p {
+        font-size: 17px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    #hero {
+        padding: 230px 150px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
     main {
         margin-top: 50px;
     }
@@ -243,5 +286,23 @@ p {
     }
     h2 {
         font-size: 25px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 25px;
+    }
+
+    p {
+        font-size: 15px;
+    }
+
+    #hero {
+        padding: 210px 47px;
     }
 }
