la til hero på siste siden også:)

--- a/om-oss/om-oss.css
+++ b/om-oss/om-oss.css
@@ -8,16 +8,31 @@ header {
   text-align: center;
 }
 
-section {
+#hero {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(../bilder/about.png);
+  color: var(--hero-font-color);
+  background-size: cover;
+  background-position: center;
+  padding: 220px 200px;
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+h1 {
+  font-size: 65px;
+  text-align: center;
+  text-shadow: 3px 3px 3px grey;
+  background-color: rgba(0, 0, 0, 40%);
+  color: rgb(255, 255, 255);
+  font-family: 'Comfortaa', sans-serif;
+  width: 800px;
+}
+
+ #om-oss {
   margin-bottom: 20px;
   margin: 80px;
   text-align: center;
-}
-
-h1,
-h2 {
-  margin-top: 0;
-
 }
 
 h2 {
@@ -35,6 +50,7 @@ h1 {
 img {
   margin: 30px;
   width: 600px;
+  border-radius: 20px;
 }
 
 #toggle-button {
