--- a/om-oss/om-oss.css
+++ b/om-oss/om-oss.css
@@ -32,7 +32,8 @@ h1 {
  #om-oss {
   margin-bottom: 20px;
   margin: 60px 15px;
-  text-align: center;
+  display: grid;
+  justify-items: center;
 }
 
 h2 {
@@ -61,6 +62,7 @@ img {
   cursor: pointer;
   border-radius: 30px;
   font-family: 'Comfortaa', sans-serif;
+
 }
 
 #toggle-button:hover {
@@ -144,6 +146,7 @@ img {
   }
 
   img {
-    width: 300px
+    width: 300px;
+    margin: 10px;
   }
 }
