--- a/om-oss/om-oss.css
+++ b/om-oss/om-oss.css
@@ -74,6 +74,10 @@ img {
   margin-top: 10px;
 }
 
+#kilder {
+  text-align: center;
+}
+
 @media only screen and (max-width: 1000px) {
   #hero {
       padding: 200px 200px;
