--- a/index/index.css
+++ b/index/index.css
@@ -86,12 +86,13 @@
 #ressurser div {
     margin: 5px; 
     padding: 15px; 
+    display: grid;
 }
 
 #ressurser img {
     height: 120px; 
-    align-content: center;
     border-radius: 20px;
+    margin-bottom: 20px;
 }
 
 #ressurser a {
@@ -102,6 +103,5 @@
     #ressurser {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr; 
-
     }
   }
