--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ nav {
 
 .logo i {
     font-size: 40px;
-    margin-left: 30px;
+    margin-left: 40px;
+    padding: 10px;
 }
 
 .logo a {
@@ -83,10 +84,6 @@ nav {
 
 .right-sections ul li a:hover {
     text-decoration: underline;
-}
-
-.logo i {
-    margin-left: 40px;
 }
 
 @media screen and (max-width: 760px) {
