format dokument og endret fil navn

--- a/universiell-utforming/uu_style.css
+++ b/universiell-utforming/uu_style.css
@@ -15,7 +15,7 @@ body {
 }
 
 #hero {
-    background-image: linear-gradient(rgb(0 0 0 / 15%), rgb(0 0 0 / 50%)), url("../bilder/Bak_img.jpeg");
+    background-image: linear-gradient(rgb(0 0 0 / 15%), rgb(0 0 0 / 50%)), url("../bilder/universell-utforming.jpeg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -197,7 +197,7 @@ p {
     #hero {
         padding: 200px 200px;
     }
-    
+
     .uu {
         margin-left: 15px;
         margin-right: 15px;
