--- a/index/index.css
+++ b/index/index.css
@@ -12,17 +12,17 @@
 
 
 #nettmobbing {
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 #nettmobbing p {
-    font-size: 18px; 
+    font-size: 18px;
 }
 
 .statestikk {
     background-color: var(--senary-color);
-    color: white; 
+    color: white;
 }
 
 .statestikk h2 {
@@ -38,7 +38,8 @@
     grid-column: span 2;
 }
 
-#paragraf i, #ulovlig i {
+#paragraf i,
+#ulovlig i {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,7 +60,7 @@
     margin-bottom: 45px;
 }
 
-#ulovlig i  {
+#ulovlig i {
     padding: 20px;
     font-size: 120px;
     color: var(--quaternary-color)
@@ -72,29 +73,29 @@
 }
 
 #nettmobbing div {
-    margin: 5px; 
+    margin: 5px;
     margin-bottom: 10px;
-    padding: 25px; 
+    padding: 25px;
 }
 
 #ressurser {
-    font-size: 18px; 
-    margin-bottom: 100px; 
+    font-size: 18px;
+    margin-bottom: 100px;
 }
 
 #ressurser div:nth-of-type(1) {
-    grid-column: span 3; 
+    grid-column: span 3;
 
 }
 
 #ressurser div {
-    margin: 5px; 
-    padding: 15px; 
+    margin: 5px;
+    padding: 15px;
     display: grid;
 }
 
 #ressurser img {
-    height: 120px; 
+    height: 120px;
     border-radius: 20px;
     margin-bottom: 20px;
 }
@@ -106,6 +107,6 @@
 @media only screen and (min-width: 800px) {
     #ressurser {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr; 
+        grid-template-columns: 1fr 1fr 1fr;
     }
-  }
+}
